Fix Player Controls Alignment Issue

--- a/src/VimeoPlayer/VimeoPlayer.css
+++ b/src/VimeoPlayer/VimeoPlayer.css
@@ -1,12 +1,10 @@
 .controls-overlay {
   z-index: 100;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vw;
+  max-height: 100vh;
+  max-width: 100vw;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
