--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Arimo');
+/*@import url('https://fonts.googleapis.com/css?family=Arimo');*/
 
 body {
-  /* margin: 0;
+   margin: 0;
   padding: 0;
-  font-family: Arimo, sans-serif;
+  /*font-family: Arimo, sans-serif;
   background: black; */
 }
 
